--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,6 @@
   <properties>
     <arquillian.version>1.0.3.Final</arquillian.version>
     <arquillian.jboss.version>7.1.1.Final</arquillian.jboss.version>
-    <!-- <arquillian.glassfish-remote.version>1.0.0.CR3</arquillian.glassfish-remote.version>
-      <arquillian.drone.version>1.0.0.CR3</arquillian.drone.version> <arquillian.jacoco.version>1.0.0.Alpha1</arquillian.jacoco.version>
-      <selenium.version>2.23.0</selenium.version> -->
     <resteasy>2.3.2.Final</resteasy>
   </properties>
   <distributionManagement>
@@ -49,6 +46,7 @@
   </issueManagement>
   <dependencyManagement>
     <dependencies>
+      <!-- START SNIPPET: arquillianbasic1 -->
       <!-- Dependencies for Arquillian -->
       <dependency>
         <groupId>org.jboss.arquillian</groupId>
@@ -57,6 +55,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <!-- END SNIPPET: arquillianbasic1 -->
       <dependency>
         <groupId>org.jboss.spec</groupId>
         <artifactId>jboss-javaee-6.0</artifactId>
@@ -179,6 +178,7 @@
       <version>2.3.2.Final</version>
       <scope>provided</scope>
     </dependency>
+    <!-- START SNIPPET: arquillianbasic2 -->
     <!-- Dependencies for Arquillian. Version is from Arquillian BOM -->
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
@@ -202,6 +202,7 @@
       <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- END SNIPPET: arquillianbasic2 -->
     <!-- START SNIPPET: junitbasic1 -->
     <dependency>
       <groupId>junit</groupId>
