translations in javascript

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
     <filter-name>nocache</filter-name>
     <url-pattern>*.js</url-pattern>
   </filter-mapping>
+  <filter-mapping>
+    <filter-name>nocache</filter-name>
+    <url-pattern>*.json</url-pattern>
+  </filter-mapping>
   <!-- END SNIPPET: nocache3 -->
   <filter-mapping>
     <filter-name>locale</filter-name>
