--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,34 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      <!-- START SNIPPET: mavenenforcer1 -->
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.2</version>
+        <dependencies>
+          <dependency>
+            <groupId>de.andrena.tools.nopackagecycles</groupId>
+            <artifactId>no-package-cycles-enforcer-rule</artifactId>
+            <version>1.0.4</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>enforce-no-package-cycles</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <phase>compile</phase>
+            <configuration>
+              <rules>
+                <NoPackageCyclesRule
+                  implementation="de.andrena.tools.nopackagecycles.NoPackageCyclesRule" />
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- END SNIPPET: mavenenforcer1 -->
       <plugin>
         <groupId>org.jboss.as.plugins</groupId>
         <artifactId>jboss-as-maven-plugin</artifactId>
